z-index bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -133,7 +133,7 @@ header {
   position: absolute;
   right: 25%;
   bottom: -14px;
-  z-index: 999;
+  z-index: 10;
   font-weight: 100;
   font-size: 13px;
   text-align: center;
